--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "mini-css-extract-plugin": "^2.9.2",
     "typescript": "^5"
   }
 }
