--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "mini-css-extract-plugin": "^2.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5"
   }
 }
